feature: fix User, добавить юнит тесты для Item